styles/index.css
html {
    box-sizing: border-box;
}

*,
*::after,
*::before {
    box-sizing: inherit;
    margin: 0;
    padding: 0;
}

.menu-container {
    color: #fff;
    background-color: #5995da;
    padding: 20px 0;
    display: flex;
    justify-content: center;
}

.menu {
    width: 900px;
    display: flex;
    justify-content: space-between;
}

.links {
    display: flex;
    justify-content: flex-end;
}

.login {
    margin-left: 20px;
}

/* HEADER */
.header-container {
    display: flex;
    justify-content: center;
    color: #5995DA;
    background-color: #D6E9FE;
}

.header {
    width: 900px;
    height: 300px;
    display: flex;
    justify-content: space-between;
    align-items: center;
}

/* PHOTO GRID */
.photo-grid-container {
    display: flex;
    justify-content: center;
}

.photo-grid {
    display: flex;
    justify-content: flex-start;
    width: 900px;
}

.photo-grid-item {
    border: 1px solid #fff;
    width: 300px;
    height: 300px;
}

